Fixed z-index for selected marker to display over other markers near it

--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,7 @@
     width: 100%;
     height: 100%;
 }
+
+.selected-marker {
+    z-index: 1000;
+}
